# gamecg

./: CMakeLists.txt  README.md  README.txt  main.cpp
3dModels/car2/: CREDITS.txt  MURCIELAGO640 BADGING MASK.tga  MURCIELAGO640 BRAKELIGHT MASK.tga  MURCIELAGO640 BRAKELIGHT.tga  MURCIELAGO640 MISC.tga  MURCIELAGO640 RIM.tga  MURCIELAGO640.3ds  Map__10_Raytrace.tga  Map__139_Normal_Bump.tga  car.mtl
3dModels/car9/: car.mtl  car.mtl~
3dModels/cars/: Meshes and Materials.txt
3dModels/cars/car1/: CHALLENGER71 BADGING MASK.tga  CHALLENGER71 BADGING NORMAL.tga  CHALLENGER71 BADGING.tga  CHALLENGER71 BRAKELIGHT.tga  CHALLENGER71 HEADLIGHT GLASS.tga  CHALLENGER71 HEADLIGHT MASK.tga  CHALLENGER71 HEADLIGHT.tga  CHALLENGER71 INTERIOR.tga  CHALLENGER71 MISC.tga  LICENSE.z3d  Map__10_Mask.tga  Map__139_Normal_Bump.tga  Map__149_Raytrace.tga  car.blend  car.blend1  car.info  car.mtl
3dModels/cars/car2/: MURCIELAGO640 BADGING NORMAL.tga  MURCIELAGO640 BADGING.tga  MURCIELAGO640 BRAKELIGHT GLASS.tga  MURCIELAGO640 DECALS.tga  MURCIELAGO640 HEADLIGHT GLASS.tga  MURCIELAGO640 HEADLIGHT MASK.tga  MURCIELAGO640 HEADLIGHT.tga  MURCIELAGO640 INTERIOR.tga  MURCIELAGO640 MISC MIRROR.tga  MURCIELAGO640 SKIN.tga  car.blend  car.blend1  car.info  car.mtl
3dModels/cars/car3/: Map__10_Falloff.tga  Map__139_Normal_Bump.tga  Map__160_Raytrace.tga  Map__163_Missing_TextureMap.tga  car.blend  car.blend1  car.info  car.mtl
3dModels/cars/car4/: Porsche_911_GT2.txt  car.blend  car.blend1  car.info  car.mtl
3dModels/city14/: Paris2010.mtl  Paris2010.mtl~  city.mtl  city.mtl~
3dModels/city3/: city.mtl  old_town_block.mtl  old_town_block.mtl~
3dModels/city6/: FLOOR5.TIF  GBM.TIF  GFHM.TIF  GHCH.TIF  GREEN.TIF  Hg-g2.tif  Hg-g2_lb2.tif  MBM.TIF  MFHM.TIF  Mfhm01.tif  PD-1.TIF  Red11-_1.tif  Red11-_2.tif  Wd_laude.tif  alleyTree_3_v1.tif  bench_2_v1.tif  bench_3_v1.tif  bench_4_v1.tif  city.mtl  city.mtl~  不锈钢 .tif
3dModels/city7/: city.mtl  city.mtl~
3dModels/hzte10ve8w-Luigi Circuit/: untitled.blend  untitled.blend1
include/: SFX.h  camera.h  car.h  chunk.h  hud.h  kdtree.hpp  light.h  material.h  mesh.h  model.h  music.h  scenario.h  shader.h  texture.h  vehiclePhysic.h  vertex.h
report/: ~$report.docx
shaders/: car.frag  car.vs  hud.frag  hud.vs  scenario.frag  scenario.vs  shader.frag  shader.vs
src/: DemoApplication.cpp  SFX.cpp  camera.cpp  car.cpp  chunk.cpp  hud.cpp  light.cpp  material.cpp  mesh.cpp  model.cpp  music.cpp  scenario.cpp  shader.cpp  vehiclePhysic.cpp
